re PR c++/84540 (ICE with alignas in variadic template)

/cp
2018-02-26  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84540
	* pt.c (tsubst_attributes): Handle correctly tsubst_attribute
	returning NULL_TREE.
	(apply_late_template_attributes): Likewise.

/testsuite
2018-02-26  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84540
	* g++.dg/cpp0x/alignas14.C: New.
	* g++.dg/cpp0x/alignas15.C: Likewise.

From-SVN: r258012